css/style.css
body {
  background: #ccffee;
  font-family: 'Courier', 'Arial', sans-serif;
  font-weight: normal;
  font-style: normal;
  color: #2F3D31;
  font-size: 1.25em;
  line-height: 20px;
  text-align:center; 
}

a {
  outline: none;
  text-decoration: none;
  color: #FFAF8C;
}

a:hover {
  text-decoration:none;
  color: #fce88d;
}

/* Fade */
.hvr-fade {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -moz-osx-font-smoothing: grayscale;
  overflow: hidden;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: color, background-color;
  transition-property: color, background-color;
}
.hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active {
  background-color: #fce88d;
  color: #fff;
}


/* Nav Menu */

.header a { 
  font-size: 16px;
  color: #2F3D31;
  text-transform: uppercase;
  letter-spacing: 5px;
  border: 1px solid #2F3D31;
  padding: 12px;
  display: inline-block;
  margin-top:25px;
  background: #fff; 
}

.header a:hover {
  border: 1px solid #fce88d;
  color: #fff;
  text-decoration: none;
}

.header a:active {
  background: #fce88d;
  color: #ffffff;
  border: 1px solid #fce88d;
}

.header-box { 
}

#menu { 
  display:block;
  background: #fff; 
}

nav ul {
  list-style: none;
  font-size:12px;
  margin-bottom:0;
}

nav li {
  margin-bottom: 0;
  display: inline-block;
  background: #fff;
  width: auto;
  padding: 10px;
}

nav a {
  position: relative;
  width: 100%;
  height: 20px;
}

/* Content */
.container {
  background: #fff;
  margin: 0 auto;
  height: 100%;
  margin-top: 40px;
  max-width: 800px;
  padding:25px;
}

.content { 
  text-align: left;
  float: left;
  margin: 0 25px;
}

.content li{ 
  margin: 0 0 5px 0;
}

.content a {
  color: #2F3D31;
  border-bottom:1px dotted #2F3D31;
}
.vertical {
  vertical-align:middle;
}

.heading {
  font-weight: bold;
  font-size: 12px; 
  letter-spacing: 0.1em;
  margin-bottom:1rem;
}

.description {
  font-size: 11px; 
}


.content a:hover {
  color: #2F3D31;
  border: 0; 
}

.bigbutton {
  padding: 20px 0;
}	 

.bigbutton a{
  font-size: 12px;
  font-style: italic; 
  color: #2F3D31;
  letter-spacing: 5px;
  margin: 0 auto;
  border: 1px solid #2F3D31;
  padding: 12px;
  display: inline;
  text-align: center;
  height: 100%;
  max-width: 270px;
}

.bigbutton a:hover {
  text-decoration:none;
  border: 1px solid #2F3D31; 
}

.bigbutton a:active {
  background: #fce88d;
  color: #ffffff;
  border: 1px solid #fce88d;
}

.profile img {
    border-radius:50%;
	text-align:center;
	width:270px;
}

.profile {
    padding-bottom:25px;	
}

/* Contact Form */
input[type="email"], input[type="text"],textarea {
  width: 100%;
}

textarea {
  height: 100px;
}

input[type="email"]:focus,
input[type="number"]:focus,
input[type="search"]:focus,
input[type="text"]:focus,
input[type="tel"]:focus,
input[type="url"]:focus,
input[type="password"]:focus,
textarea:focus,
select:focus {
  border: 1px solid #95e7cc;
  outline: 0; }

.contact {
  text-align: center; 
  margin: 0 25px; 
}

/* Footer */
.footer {
  padding: 45px 0 0;
  bottom: 0; 
}

.links {
  margin: 10px;
}


/* Media */
@media (min-width: 550px) {

  nav li {
    width: auto;
  }


  nav a {
    margin: 5px;
  }
  
  input[type="email"], input[type="text"],textarea {
  width: 300px;
}

.profile img {
	width: 40%;
	height: auto;
}
}

